fixed loading on mobile

--- a/src/pages/CatalogPage.scss
+++ b/src/pages/CatalogPage.scss
@@ -14,6 +14,8 @@
     .loading {
       display: grid;
       place-content: center;
+      min-height: 100px;
+      min-width: 100px;
     }
   }
 }
